# Claude-Pet

./: index.html
claude-pet/: CLAUDE.md  generate-icons.cjs  icon-generator.html  package-lock.json  package.json
claude-pet/docs/superpowers/plans/: 2026-04-19-claude-pet-implementation.md  2026-04-21-tool-execution-animation-plan.md
claude-pet/docs/superpowers/specs/: 2026-04-19-claude-pet-design.md  2026-04-21-tool-execution-animation-design.md
claude-pet/src/: App.tsx  index.css
claude-pet/src-tauri/: Cargo.toml  tauri.conf.json
claude-pet/src-tauri/capabilities/: default.json
claude-pet/src-tauri/icons/: icon.icns
claude-pet/src-tauri/src/: lib.rs  main.rs  mcp_client.rs  state.rs
claude-pet/src/components/: HoverInfoPanel.css  HoverInfoPanel.tsx  MiniChat.css  MiniChat.tsx  Pet.css  Pet.tsx  ToolBubble.css  ToolBubble.tsx
claude-pet/src/components/pets/: AdorablePet.css  AdorablePetRenderer.tsx  ContextMenu.css  ContextMenu.tsx  EmojiPet.css  EmojiPet.tsx  PetRenderer.tsx
claude-pet/src/hooks/: usePetState.ts
