[package]
name = "claude-pet"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "net"] }
dirs = "5"
rmcp = "0.16"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
notify = "6"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
